exome-results-browsers/prod/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: exome-results-browsers-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: prod-exome-results-browsers-ip
    networking.gke.io/managed-certificates: "exome-results-browsers-managed-cert, exome-results-browsers-managed-cert-v2"
    networking.gke.io/v1beta1.FrontendConfig: exome-results-browsers-frontend-config
  labels:
    service: exome-results-browsers
spec:
  rules:
    - host: asc.broadinstitute.org
      http:
        paths:
          - backend:
              service:
                name: exome-results-browsers
                port:
                  number: 80
            pathType: ImplementationSpecific
    - host: bipex.broadinstitute.org
      http:
        paths:
          - backend:
              service:
                name: exome-results-browsers
                port:
                  number: 80
            pathType: ImplementationSpecific
    - host: epi25.broadinstitute.org
      http:
        paths:
          - backend:
              service:
                name: exome-results-browsers
                port:
                  number: 80
            pathType: ImplementationSpecific
    - host: schema.broadinstitute.org
      http:
        paths:
          - backend:
              service:
                name: exome-results-browsers
                port:
                  number: 80
            pathType: ImplementationSpecific
    - host: gp2.broadinstitute.org
      http:
        paths:
          - backend:
              service:
                name: exome-results-browsers
                port:
                  number: 80
            pathType: ImplementationSpecific
    - host: ibdseq.broadinstitute.org
      http:
        paths:
          - backend:
              service:
                name: exome-results-browsers
                port:
                  number: 80
            pathType: ImplementationSpecific
